{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 81,
  "lineage": "2176820d-0291-8de7-d342-a753cd5210da",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:elastic-ip/eipalloc-0883f6ffe039f977d",
            "association_id": "eipassoc-06013f060a91a764c",
            "domain": "vpc",
            "filter": [
              {
                "name": "public-ip",
                "values": [
                  "3.38.29.119"
                ]
              }
            ],
            "id": "eipalloc-0883f6ffe039f977d",
            "network_interface_id": "eni-08872369959694309",
            "network_interface_owner_id": "605134473022",
            "private_dns": "ip-10-1-200-35.ap-northeast-2.compute.internal",
            "private_ip": "10.1.200.35",
            "public_dns": "ec2-3-38-29-119.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.29.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Event-vpc-az-a"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "nat_eip_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:elastic-ip/eipalloc-0c9a06c8fdbb4ca47",
            "association_id": "eipassoc-0a97ab560e4203279",
            "domain": "vpc",
            "filter": [
              {
                "name": "public-ip",
                "values": [
                  "13.124.103.238"
                ]
              }
            ],
            "id": "eipalloc-0c9a06c8fdbb4ca47",
            "network_interface_id": "eni-091951cfe7ff65c19",
            "network_interface_owner_id": "605134473022",
            "private_dns": "ip-10-1-201-144.ap-northeast-2.compute.internal",
            "private_ip": "10.1.201.144",
            "public_dns": "ec2-13-124-103-238.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.103.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Event-vpc-az-c"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "event_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:internet-gateway/igw-0e011ada1b643c276",
            "id": "igw-0e011ada1b643c276",
            "owner_id": "605134473022",
            "tags": {
              "Name": "Event-Internet-Gateway"
            },
            "tags_all": {
              "Name": "Event-Internet-Gateway"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "event_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/terraform-event-alb/6472615512f5a17f",
            "arn_suffix": "app/terraform-event-alb/6472615512f5a17f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-event-alb-1286349233.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/terraform-event-alb/6472615512f5a17f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-event-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c456375c04a05540"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000ff2b816683fbba"
              },
              {
                "subnet_id": "subnet-01e784173e407eef0"
              }
            ],
            "subnets": [
              "subnet-000ff2b816683fbba",
              "subnet-01e784173e407eef0"
            ],
            "tags": {
              "Name": "terraform-event-ALB"
            },
            "tags_all": {
              "Name": "terraform-event-ALB"
            },
            "vpc_id": "vpc-061260f6e81150f73",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "event_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/terraform-event-alb/6472615512f5a17f/03c99f2bdfc88b7b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/terraform-event-tg/c0002153970be05c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/terraform-event-alb/6472615512f5a17f/03c99f2bdfc88b7b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/terraform-event-alb/6472615512f5a17f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.event_alb",
            "aws_lb_target_group.event_tg",
            "aws_security_group.sg_alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "event_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/terraform-event-tg/c0002153970be05c",
            "arn_suffix": "targetgroup/terraform-event-tg/c0002153970be05c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/terraform-event-tg/c0002153970be05c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/terraform-event-alb/6472615512f5a17f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-event-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "terraform-event-alb-target-group"
            },
            "tags_all": {
              "Name": "terraform-event-alb-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "event_nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0883f6ffe039f977d",
            "association_id": "eipassoc-06013f060a91a764c",
            "connectivity_type": "public",
            "id": "nat-0954af00c18d81da7",
            "network_interface_id": "eni-08872369959694309",
            "private_ip": "10.1.200.35",
            "public_ip": "3.38.29.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000ff2b816683fbba",
            "tags": {
              "Name": "Event-NAT-Gateway-A"
            },
            "tags_all": {
              "Name": "Event-NAT-Gateway-A"
            }
          },
          "dependencies": [
            "aws_subnet.public_a",
            "aws_vpc.junglegym_event_vpc",
            "data.aws_eip.nat_eip_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "event_nat_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9a06c8fdbb4ca47",
            "association_id": "eipassoc-0a97ab560e4203279",
            "connectivity_type": "public",
            "id": "nat-0d509dd7f5c790749",
            "network_interface_id": "eni-091951cfe7ff65c19",
            "private_ip": "10.1.201.144",
            "public_ip": "13.124.103.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01e784173e407eef0",
            "tags": {
              "Name": "Event-NAT-Gateway-C"
            },
            "tags_all": {
              "Name": "Event-NAT-Gateway-C"
            }
          },
          "dependencies": [
            "aws_subnet.public_c",
            "aws_vpc.junglegym_event_vpc",
            "data.aws_eip.nat_eip_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:route-table/rtb-03026e164fb0bf3f9",
            "id": "rtb-03026e164fb0bf3f9",
            "owner_id": "605134473022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0954af00c18d81da7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Event-Private-Route-Table-A"
            },
            "tags_all": {
              "Name": "Event-Private-Route-Table-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.event_nat_a",
            "aws_subnet.public_a",
            "aws_vpc.junglegym_event_vpc",
            "data.aws_eip.nat_eip_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:route-table/rtb-0d3398aede6025b64",
            "id": "rtb-0d3398aede6025b64",
            "owner_id": "605134473022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d509dd7f5c790749",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Event-Private-Route-Table-C"
            },
            "tags_all": {
              "Name": "Event-Private-Route-Table-C"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.event_nat_c",
            "aws_subnet.public_c",
            "aws_vpc.junglegym_event_vpc",
            "data.aws_eip.nat_eip_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:route-table/rtb-02105fa7162c6b986",
            "id": "rtb-02105fa7162c6b986",
            "owner_id": "605134473022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e011ada1b643c276",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Event-Public-Route-Table"
            },
            "tags_all": {
              "Name": "Event-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.event_igw",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004b020ba705f9d90",
            "route_table_id": "rtb-03026e164fb0bf3f9",
            "subnet_id": "subnet-0851efb83b6602a1a"
          },
          "dependencies": [
            "aws_nat_gateway.event_nat_a",
            "aws_route_table.private_rt_a",
            "aws_subnet.private_a_1",
            "aws_subnet.public_a",
            "aws_vpc.junglegym_event_vpc",
            "data.aws_eip.nat_eip_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0819db5ddbba33c75",
            "route_table_id": "rtb-0d3398aede6025b64",
            "subnet_id": "subnet-082da239442c8c12e"
          },
          "dependencies": [
            "aws_nat_gateway.event_nat_c",
            "aws_route_table.private_rt_c",
            "aws_subnet.private_c_1",
            "aws_subnet.public_c",
            "aws_vpc.junglegym_event_vpc",
            "data.aws_eip.nat_eip_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bc29eee8946743f",
            "route_table_id": "rtb-02105fa7162c6b986",
            "subnet_id": "subnet-000ff2b816683fbba"
          },
          "dependencies": [
            "aws_internet_gateway.event_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a7d0c924a632afa",
            "route_table_id": "rtb-02105fa7162c6b986",
            "subnet_id": "subnet-01e784173e407eef0"
          },
          "dependencies": [
            "aws_internet_gateway.event_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_c",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "event_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-0b3d0a168c267360a",
            "description": "event-bastion-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3d0a168c267360a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "event-bastion-sg",
            "name_prefix": "",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "event-bastion-sg"
            },
            "tags_all": {
              "Name": "event-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-0c456375c04a05540",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c456375c04a05540",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250221025320420000000002",
            "name_prefix": "terraform-",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-event-vpc-alb-sg"
            },
            "tags_all": {
              "Name": "terraform-event-vpc-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-0de9e45c8a95253b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de9e45c8a95253b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.192/27",
                  "10.2.0.224/27"
                ],
                "description": "From PROD DB Subnet for dms",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.2.0.54/32"
                ],
                "description": "From PRD Openvpn",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "From Openvpn",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3d0a168c267360a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250221025324407300000006",
            "name_prefix": "terraform-",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "terraform-event-db-rds-security-group"
            },
            "tags_all": {
              "Name": "terraform-event-db-rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.event_bastion_sg",
            "aws_security_group.sg_alb",
            "aws_security_group.sg_ecs",
            "aws_security_group.sg_redis",
            "aws_vpc.junglegym_event_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-0dfcd48421c1f6a72",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093034f1fdc9b3989"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0dfcd48421c1f6a72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c456375c04a05540"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250221025322657300000005",
            "name_prefix": "terraform-",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-event-vpc-ecs-sg"
            },
            "tags_all": {
              "Name": "terraform-event-vpc-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_redis",
            "aws_vpc.junglegym_event_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-056ffb4fcd3b013da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056ffb4fcd3b013da",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250221025320321900000001",
            "name_prefix": "terraform-",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-event-vpc-nat-sg"
            },
            "tags_all": {
              "Name": "terraform-event-vpc-nat-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-093034f1fdc9b3989",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093034f1fdc9b3989",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "terraform-20250221025320458900000003",
            "name_prefix": "terraform-",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-event-redis-security-group"
            },
            "tags_all": {
              "Name": "terraform-event-redis-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-083309496f31d6f5c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083309496f31d6f5c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfcd48421c1f6a72"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250221025324437100000007",
            "name_prefix": "terraform-",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-Event-VPC-Endpoint-SG"
            },
            "tags_all": {
              "Name": "terraform-Event-VPC-Endpoint-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_ecs",
            "aws_security_group.sg_redis",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-0851efb83b6602a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0851efb83b6602a1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Event-vpc-private-subnet-a-1"
            },
            "tags_all": {
              "Name": "Event-vpc-private-subnet-a-1"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-032bdc0d5835053e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032bdc0d5835053e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Event-vpc-private-subnet-a-2"
            },
            "tags_all": {
              "Name": "Event-vpc-private-subnet-a-2"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-082da239442c8c12e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082da239442c8c12e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Event-vpc-private-subnet-c-1"
            },
            "tags_all": {
              "Name": "Event-vpc-private-subnet-c-1"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-08f1bd31de08be66b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f1bd31de08be66b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Event-vpc-private-subnet-c-2"
            },
            "tags_all": {
              "Name": "Event-vpc-private-subnet-c-2"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-000ff2b816683fbba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000ff2b816683fbba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Event-vpc-public-subnet-a"
            },
            "tags_all": {
              "Name": "Event-vpc-public-subnet-a"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-01e784173e407eef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e784173e407eef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Event-vpc-public-subnet-c"
            },
            "tags_all": {
              "Name": "Event-vpc-public-subnet-c"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "junglegym_event_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:vpc/vpc-061260f6e81150f73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-009bb4c14d6cf2704",
            "default_route_table_id": "rtb-07c92da26615ec3ec",
            "default_security_group_id": "sg-0eb7c59fdbec35189",
            "dhcp_options_id": "dopt-078af18d24f78f7f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061260f6e81150f73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c92da26615ec3ec",
            "owner_id": "605134473022",
            "tags": {
              "Environment": "event",
              "Name": "terraform-junglegym-event-vpc"
            },
            "tags_all": {
              "Environment": "event",
              "Name": "terraform-junglegym-event-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:vpc-endpoint/vpce-0f2ac90c810c36c4b",
            "dns_entry": [
              {
                "dns_name": "vpce-0f2ac90c810c36c4b-cmc4iy9c.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0f2ac90c810c36c4b-cmc4iy9c-ap-northeast-2c.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0f2ac90c810c36c4b-cmc4iy9c-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f2ac90c810c36c4b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00a28c36e308cb17d",
              "eni-0ee6e4cabc7c5cfd7"
            ],
            "owner_id": "605134473022",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-083309496f31d6f5c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.145",
                "subnet_id": "subnet-0851efb83b6602a1a"
              },
              {
                "ipv4": "10.1.3.131",
                "subnet_id": "subnet-082da239442c8c12e"
              }
            ],
            "subnet_ids": [
              "subnet-082da239442c8c12e",
              "subnet-0851efb83b6602a1a"
            ],
            "tags": {
              "Name": "terraform-Event-ECR-API-Endpoint"
            },
            "tags_all": {
              "Name": "terraform-Event-ECR-API-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_ecs",
            "aws_security_group.sg_redis",
            "aws_security_group.sg_vpc_endpoint",
            "aws_subnet.private_a_1",
            "aws_subnet.private_c_1",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:vpc-endpoint/vpce-0bb0d0148ba40bba4",
            "dns_entry": [
              {
                "dns_name": "vpce-0bb0d0148ba40bba4-8t0tcnsg.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0bb0d0148ba40bba4-8t0tcnsg-ap-northeast-2c.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0bb0d0148ba40bba4-8t0tcnsg-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bb0d0148ba40bba4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01b368337922e8d41",
              "eni-0f3d3886aeee7b54d"
            ],
            "owner_id": "605134473022",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-083309496f31d6f5c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.1.221",
                "subnet_id": "subnet-0851efb83b6602a1a"
              },
              {
                "ipv4": "10.1.3.105",
                "subnet_id": "subnet-082da239442c8c12e"
              }
            ],
            "subnet_ids": [
              "subnet-082da239442c8c12e",
              "subnet-0851efb83b6602a1a"
            ],
            "tags": {
              "Name": "terraform-Event-ECR-docker-Endpoint"
            },
            "tags_all": {
              "Name": "terraform-Event-ECR-docker-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_ecs",
            "aws_security_group.sg_redis",
            "aws_security_group.sg_vpc_endpoint",
            "aws_subnet.private_a_1",
            "aws_subnet.private_c_1",
            "aws_vpc.junglegym_event_vpc"
          ]
        }
      ]
    }
  ]
}